Update index.html and script.js

--- a/index.html
+++ b/index.html
@@ -9,10 +9,31 @@
   <body>
     <div id=""></div>
     <div id="test"></div>
-    <div id="test-2"></div>
-    <div id="test-3"></div>
+    <div id="test-2">
+      <h2>Atelier 1</h2>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur
+        tempora aliquam blanditiis sit non. Quibusdam quod recusandae iste non
+        eveniet, ex, saepe animi, quam nobis dignissimos magnam magni ipsum
+        quis.
+      </p>
+    </div>
+    <div id="test-3">
+      <h2>Atelier 2</h2>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam nam
+        alias nisi, unde eligendi cupiditate ipsum fugiat nobis deleniti sint
+        quaerat vero eveniet quis obcaecati dolores quae ullam autem ex?
+      </p>
+    </div>
 
     <div class="main"></div>
+
+    <img
+      class="sun"
+      src="https://www.solarsystemscope.com/textures/download/2k_sun.jpg"
+      alt=""
+    />
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/MotionPathPlugin.min.js"></script>
