Add center alignment for the sun image

--- a/index.html
+++ b/index.html
@@ -29,11 +29,13 @@
 
     <div class="main"></div>
 
-    <img
-      class="sun"
-      src="https://www.solarsystemscope.com/textures/download/2k_sun.jpg"
-      alt=""
-    />
+    <div class="ceeeentre">
+      <img
+        class="sun"
+        src="https://www.solarsystemscope.com/textures/download/2k_sun.jpg"
+        alt=""
+      />
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/MotionPathPlugin.min.js"></script>
